Archive2/d9/5c7db4089460ae/output
main.cpp:10:6: error: ISO C++ forbids declaration of 'main' with no type [-Wpedantic]
 main()
      ^
